# git-tui

./: Cargo.toml  Keybindings.md  README.md  TODO.md
src/: List.rs  app.rs  component_style.rs  error.rs  git.rs  list_window.rs  main.rs  mod.rs  ui.rs
src/components/: branch_popup.rs  branches.rs  branchlist.rs  cherry_pick_popup.rs  commit_popup.rs  diff.rs  diff_staged.rs  error.rs  error_popup.rs  fetch_popup.rs  files.rs  log.rs  log_popup.rs  message_popup.rs  mod.rs  push_popup.rs  remote_popup.rs  status.rs
src/git/: branch.rs  callbacks.rs  commit.rs  diff.rs  fetch.rs  git_branch.rs  git_diff.rs  git_log.rs  git_status.rs  gitdiff.rs  gitlog.rs  gitstatus.rs  log.rs  mod.rs  push.rs  remote.rs  stage.rs  status.rs  time.rs
