[package]
name = "git-buddy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.23"
crossbeam = "0.8.1"
git2 = "0.14"
fuzzy-matcher = "*"
anyhow = "1.0"
