[package]
name = "git-buddy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.23"
crossbeam = "0.8.1"
fuzzy-matcher = "*"
git2 = "0.14"
tui = "0.17"
